--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,35 @@
 appnope==0.1.3
 asttokens==2.0.5
+attrs==21.4.0
 backcall==0.2.0
+certifi==2022.6.15
+charset-normalizer==2.0.12
 decorator==5.1.1
+exceptiongroup==1.0.0rc8
 executing==0.8.3
+hypothesis==6.47.3
+idna==3.3
+iniconfig==1.1.1
 ipython==8.4.0
 jedi==0.18.1
 matplotlib-inline==0.1.3
+packaging==21.3
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==1.0.0
 prompt-toolkit==3.0.29
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 Pygments==2.12.0
+pyparsing==3.0.9
+pytest==7.1.2
+requests==2.28.0
 six==1.16.0
+sortedcontainers==2.4.0
 stack-data==0.2.0
+tomli==2.0.1
 traitlets==5.2.2.post1
+urllib3==1.26.9
 wcwidth==0.2.5
